# mcp-server

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
src/: config.py  resources.py  server.py
src/tools/: __init__.py  admin_dashboard_tools.py  ally_ai_production_tools.py  chatbot_backend_tools.py  context_tools.py  cross_repo_tools.py  file_tools.py  firebase_backend_tools.py  git_tools.py  repo_tools.py  scaffold_tools.py  selenium_automation_tools.py  validation_tools.py  voice_backend_tools.py  workflow_builder_tools.py
