[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dealership-mcp-server"
version = "0.1.0"
description = "MCP Server for managing Dealership AI repositories"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
]

[project.scripts]
dealership-mcp = "src.server:main"
